[gd_scene load_steps=22 format=2]

[ext_resource path="res://Menus/resources/bg.jpg" type="Texture" id=1]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menus/resources/black_btn.tres" type="StyleBox" id=3]
[ext_resource path="res://Menus/store/gun_selection.gd" type="Script" id=4]
[ext_resource path="res://Menus/resources/light_b.png" type="Texture" id=5]
[ext_resource path="res://Menus/resources/red_btn.tres" type="StyleBox" id=6]
[ext_resource path="res://Sprites/UI/laser.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/mag.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/next_white.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.666667 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
shadow_size = 6

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=6]
resource_name = "buy_popup"
tracks/0/type = "value"
tracks/0/path = NodePath("buy:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.4, 0.4 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sec_gun:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 740, 260 ), Vector2( 1300, 260 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sec_gun:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("weapons:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 135, 0 ), Vector2( 135, -250 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("weapons:rect_rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("primary_gun:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 260 ), Vector2( -600, 260 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("primary_gun:rect_rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("back:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 563.684, 583.21 ), Vector2( 563.684, 730 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("back:rect_rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("weapons:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 192, -250 ), Vector2( 135, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("weapons:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sec_gun:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1300, 260 ), Vector2( 740, 260 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sec_gun:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("primary_gun:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -600, 260 ), Vector2( 0, 260 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("primary_gun:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("back:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 563.684, 730 ), Vector2( 563.684, 583.21 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("back:rect_rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0941176, 0.0823529, 0.0823529, 0.976471 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
shadow_size = 6

[sub_resource type="DynamicFont" id=9]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.109804, 0.65098, 0.0156863, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="DynamicFont" id=11]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 28
use_filter = true
font_data = ExtResource( 2 )

[node name="gun_selection" type="CanvasLayer"]
script = ExtResource( 4 )
laser_tex = ExtResource( 7 )
mag_tex = ExtResource( 8 )

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="primary_gun" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -600.0
margin_top = -460.0
margin_right = -70.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="selected" type="Label" parent="primary_gun"]
anchor_left = 0.5
anchor_top = 0.934
anchor_right = 0.5
anchor_bottom = 0.934
margin_left = -153.321
margin_top = -20.6677
margin_right = 152.679
margin_bottom = 20.3323
custom_fonts/font = SubResource( 2 )
text = "Selected as Primary gun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gun_panel" type="Panel" parent="primary_gun"]
anchor_left = 0.5
anchor_top = 0.008
anchor_right = 0.5
anchor_bottom = 0.008
margin_left = -108.082
margin_top = 0.000940084
margin_right = 108.918
margin_bottom = 171.001
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="texture" type="TextureRect" parent="primary_gun/gun_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="primary_gun/gun_panel"]
margin_left = 50.0
margin_top = 182.0
margin_right = 151.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 2 )
text = "Ak47"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prim_laser" type="Button" parent="primary_gun"]
anchor_left = 0.5
anchor_top = 0.617
anchor_right = 0.5
anchor_bottom = 0.617
margin_left = -150.0
margin_top = -26.82
margin_right = 146.0
margin_bottom = 27.18
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Buy Laser sight"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prim_clip_ext" type="Button" parent="primary_gun"]
anchor_left = 0.5
anchor_top = 0.793
anchor_right = 0.5
anchor_bottom = 0.793
margin_left = -151.587
margin_top = -26.8596
margin_right = 144.413
margin_bottom = 27.1404
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Buy clip extender"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sec_gun" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0001
margin_top = -460.0
margin_right = 560.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="selected" type="Label" parent="sec_gun"]
anchor_left = 0.5
anchor_top = 0.934
anchor_right = 0.5
anchor_bottom = 0.934
margin_left = -153.321
margin_top = -20.6677
margin_right = 152.679
margin_bottom = 20.3323
custom_fonts/font = SubResource( 2 )
text = "Selected as Secondary gun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gun_panel" type="Panel" parent="sec_gun"]
anchor_left = 0.5
anchor_top = 0.008
anchor_right = 0.5
anchor_bottom = 0.008
margin_left = -108.082
margin_top = 0.000940084
margin_right = 108.918
margin_bottom = 171.001
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="texture" type="TextureRect" parent="sec_gun/gun_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="sec_gun/gun_panel"]
margin_left = 50.0
margin_top = 182.0
margin_right = 151.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 2 )
text = "Ak47"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sec_laser" type="Button" parent="sec_gun"]
anchor_left = 0.5
anchor_top = 0.617
anchor_right = 0.5
anchor_bottom = 0.617
margin_left = -150.0
margin_top = -26.82
margin_right = 146.0
margin_bottom = 27.18
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Buy Laser sight"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sec_clip_ext" type="Button" parent="sec_gun"]
anchor_left = 0.5
anchor_top = 0.793
anchor_right = 0.5
anchor_bottom = 0.793
margin_left = -151.587
margin_top = -26.8596
margin_right = 144.413
margin_bottom = 27.1404
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Buy clip extender"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapons" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -505.0
margin_top = -250.0
margin_right = 505.0
margin_bottom = -24.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="prev_btn" type="TextureButton" parent="weapons"]
margin_left = 10.65
margin_top = 16.3
margin_right = 143.65
margin_bottom = 208.3
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_btn" type="TextureButton" parent="weapons"]
margin_left = 1000.48
margin_top = 24.8918
margin_right = 1133.48
margin_bottom = 216.892
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="weapons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -470.0
margin_top = -82.5
margin_right = 470.0
margin_bottom = 82.5
custom_constants/separation = 40
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="p1" type="Panel" parent="weapons/HBoxContainer"]
margin_right = 205.0
margin_bottom = 165.0
rect_min_size = Vector2( 205, 165 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="p1_btn" type="TextureButton" parent="weapons/HBoxContainer/p1"]
margin_left = 3.0
margin_top = 3.0
margin_right = 202.0
margin_bottom = 162.0
expand = true
stretch_mode = 5

[node name="p2" type="Panel" parent="weapons/HBoxContainer"]
margin_left = 245.0
margin_right = 450.0
margin_bottom = 165.0
rect_min_size = Vector2( 205, 165 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="p2_btn" type="TextureButton" parent="weapons/HBoxContainer/p2"]
margin_left = 3.0
margin_top = 3.0
margin_right = 202.0
margin_bottom = 162.0
expand = true
stretch_mode = 6

[node name="p3" type="Panel" parent="weapons/HBoxContainer"]
margin_left = 490.0
margin_right = 695.0
margin_bottom = 165.0
rect_min_size = Vector2( 205, 165 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="p3_btn" type="TextureButton" parent="weapons/HBoxContainer/p3"]
margin_left = 3.0
margin_top = 3.0
margin_right = 202.0
margin_bottom = 162.0
expand = true
stretch_mode = 6

[node name="p4" type="Panel" parent="weapons/HBoxContainer"]
margin_left = 735.0
margin_right = 940.0
margin_bottom = 165.0
rect_min_size = Vector2( 205, 165 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="p4_btn" type="TextureButton" parent="weapons/HBoxContainer/p4"]
margin_left = 3.0
margin_top = 3.0
margin_right = 202.0
margin_bottom = 162.0
expand = true
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "initial_anim"
playback_speed = 2.0
anims/buy_popup = SubResource( 6 )
anims/initial_anim = SubResource( 7 )

[node name="buy" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -234.0
margin_right = 256.0
margin_bottom = 234.0
rect_pivot_offset = Vector2( 256, 252.692 )
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="cost" type="Label" parent="buy"]
margin_left = 57.0
margin_top = 292.0
margin_right = 241.0
margin_bottom = 324.0
custom_fonts/font = SubResource( 9 )
text = "Cost :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cash" type="Label" parent="buy"]
margin_left = 57.0
margin_top = 346.737
margin_right = 241.0
margin_bottom = 378.737
custom_fonts/font = SubResource( 9 )
text = "Cash :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="img" type="TextureRect" parent="buy"]
anchor_left = 0.48
anchor_top = 0.246
anchor_right = 0.48
anchor_bottom = 0.246
margin_left = -111.76
margin_top = -88.128
margin_right = 112.24
margin_bottom = 87.872
texture = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="buy/img"]
margin_left = 27.1737
margin_top = 193.692
margin_right = 172.174
margin_bottom = 225.692
custom_fonts/font = SubResource( 9 )
text = "Laser Sight"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buy_Button" type="Button" parent="buy"]
margin_left = 51.413
margin_top = 416.834
margin_right = 162.413
margin_bottom = 452.834
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_buy" type="Button" parent="buy"]
margin_left = 372.953
margin_top = 416.834
margin_right = 483.953
margin_bottom = 452.834
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 11 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.846
anchor_right = 0.5
anchor_bottom = 0.846
margin_left = -76.316
margin_top = 120.88
margin_right = 69.684
margin_bottom = 172.88
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 12 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="primary_gun/prim_laser" to="." method="_on_prim_laser_pressed"]
[connection signal="pressed" from="primary_gun/prim_clip_ext" to="." method="_on_prim_clip_ext_pressed"]
[connection signal="pressed" from="sec_gun/sec_laser" to="." method="_on_sec_laser_pressed"]
[connection signal="pressed" from="sec_gun/sec_clip_ext" to="." method="_on_sec_clip_ext_pressed"]
[connection signal="pressed" from="weapons/prev_btn" to="." method="_on_prev_btn_pressed"]
[connection signal="pressed" from="weapons/next_btn" to="." method="_on_next_btn_pressed"]
[connection signal="pressed" from="weapons/HBoxContainer/p1/p1_btn" to="." method="_on_p1_btn_pressed"]
[connection signal="pressed" from="weapons/HBoxContainer/p2/p2_btn" to="." method="_on_p2_btn_pressed"]
[connection signal="pressed" from="weapons/HBoxContainer/p3/p3_btn" to="." method="_on_p3_btn_pressed"]
[connection signal="pressed" from="weapons/HBoxContainer/p4/p4_btn" to="." method="_on_p4_btn_pressed"]
[connection signal="pressed" from="buy/buy_Button" to="." method="_on_buy_Button_pressed"]
[connection signal="pressed" from="buy/exit_buy" to="." method="_on_exit_buy_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
